# IA_Vtuber

./: .dockerignore  .env  .env.example  .gitignore  Makefile  Procfile.dev  README.md  pytest.ini  requirements-test.txt  requirements.txt
Postman/: TTS_Service.postman_collection.json
SiguientesPasos/: ROADMAP_MEMORIA.md
apps/desktop-pet-qt/: pyproject.toml  requirements.txt  run_gui.py
casiopy-app/: .env.example  README.md  requirements.txt  server.py  start.bat  start.sh
casiopy-app/static/: index.html
casiopy-app/tests/: test_server.py
dataset/: CAMBIOS.md  DUPLICATES_REPORT.txt  INDIVIDUAL_REGEN_FIX.md  README.md  SYNC_FIX_SUMMARY.md  clean_duplicate_audios.py  delete_completed_audios.py  find_duplicates.py  fix_duplicates.py  fix_duplicates_v2.py  fix_state.py  fix_sync.py  generate_metadata.py  generation_state.json  metadata.csv  requirements.txt  start.bat  sync_texts.py  test_batch_logic.py  test_synthesis.py  verify_dataset.py
dataset/src/: __init__.py  audio_processor.py  content_generator.py  generator.py  main.py  models.py  state_manager.py  tts_client.py  (+1 more)
finetune-melotts/: .gitignore  1_prepare_dataset.py  2_preprocess.py  3_train.py  4_test.py  VOICE_PARAMS.md  run.bat  service.py
scripts/: dev.ps1  fish_download_weights.ps1  fish_start.ps1  fish_start.py  kill_by_pidfile.py  run_bg.py  voice_stack.py  wokada_start.ps1
services/: README.md
services/desktopctl/: README.md  pyproject.toml  pytest.ini
services/desktopctl/src/: hotkeys.py  server.py  ui_automation.py
services/desktopctl/tests/: conftest.py  test_desktopctl.py  test_flows.py
services/monitoring-service/: FEATURES.md  INICIO-RAPIDO.md  MONITORING.md  README.md  pyproject.toml  start.bat  start.ps1  start.sh
services/monitoring-service/src/: __init__.py  audit_logger.py  main.py  monitoring.py
services/monitoring-service/src/static/: blips.html  conversation.html  index.html  logs.html  memory.html  monitoring.html  tts-backends.html  tts.html  vtuber-chat.html
services/monitoring-service/src/static/css/: monitoring.css
services/monitoring-service/src/static/js/: monitoring.js
services/monitoring-service/tests/: conftest.py  test_memory_panel.py  test_personality_panel.py  test_training_panel.py
services/stt/: .gitignore  ACCURACY_GUIDE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  pyproject.toml  test_microphone.py
services/stt/src/: __init__.py  cli.py  config.py  server.py  speaker_identifier.py  transcriber.py
services/stt/tests/: test_server.py
services/tts/: README.md  pyproject.toml
services/tts-blips/: .gitignore  README.md  USAGE.md  example_integration.py  pyproject.toml  test_quick.py
services/tts-blips/src/: __init__.py  blip_generator.py  models.py  server.py  voice_config.py
services/tts-blips/tests/: __init__.py  test_blip_generator.py  test_server.py
services/tts/src/: __init__.py  cli.py  conversation_client.py  engine.py  engine_http.py  fish_server.py  logging_config.py  metrics.py  performance.py  probe_emotions.py  probe_tts.py  server.py
services/tts/src/pyinject/: sitecustomize.py
services/tts/src/voices/: __init__.py  presets.py  presets.yaml
services/tts/tests/: conftest.py  test_engine.py  test_fish_server.py  test_server.py  test_server_tts.py
services/tts/tests/deprecated/: README.md  fish_client_casiopy.py
services/tts/tests/experimental/: README.md  conversation_tts.py
services/tts/tools/: README.md  __init__.py  benchmark.py  diag.py  probe_emotions.py
services/voice/: .env  .env.example  Procfile.voice  README.md  pyproject.toml  requirements.txt
services/voice/src/: config.py  pipeline.py  server.py
services/voice/src/cache/: audio_cache.py
services/voice/src/clients/: gateway_ws.py
services/voice/src/schemas/: speak_request.py
services/voice/src/tools/: healthcheck.py  try_say.py
services/voice/src/tts/: emotions_map.yaml  fish_client.py  prompts.py
services/voice/src/tts_vc_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/voice/src/vc/: rvc_client.py  rvc_server.py  settings.yaml
tests/: README.md  __init__.py  conftest.py  test_integration.py
(+154 files in other folders)
