[project]
name = "desktopctl"
version = "1.0.0"
description = "Desktop control service: mouse, keyboard, windows and global hotkeys"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pynput>=1.7",
    "pygetwindow>=0.0.9",
    "Pillow>=10.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
