[project]
name = "stt-service"
version = "0.1.0"
description = "Speech-to-Text service with speaker identification support"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "faster-whisper>=0.10.0",
    # Future speaker identification dependencies (commented for now)
    # "pyannote.audio>=3.1.0",  # Speaker diarization
    # "speechbrain>=0.5.16",    # Speaker embeddings
    # "resemblyzer>=0.1.1",     # Voice comparison
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
