[project]
name = "vtuber-tts"
version = "0.1.0"
description = "Text to speech microservice using Fish Audio"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
fish = [
    "transformers>=4.40",
    "torch",
    "soundfile",
    "numpy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
