[project]
name = "tts-vc-service"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "soundfile>=0.12",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "black", "ruff"]
